2009-11-04  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.ExtractMethod/ExtractMethodRefactoring.cs:
	  Fixed 'Bug 552140 - Exception on refactor to method'.

2009-10-31  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/Change.cs:
	* MonoDevelop.Refactoring.MoveTypeToFile/MoveTypeToFileRefactoring.cs:
	  fixed 'Bug 551554 - interface rename does not sync project
	  file'.

2009-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.Refactoring.addin.xml: Bump MD version.

2009-10-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.ExtractMethod/VariableLookupVisitor.cs:
	* MonoDevelop.Refactoring.ExtractMethod/ExtractMethodRefactoring.cs:
	* MonoDevelop.Refactoring.DeclareLocal/DeclareLocalCodeGenerator.cs:
	  declare local/extract method is now much faster on large
	  files.

2009-10-29  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* MonoDevelop.Refactoring.csproj:
	* gtk-gui/MonoDevelop.CodeGeneration.GenerateCodeWindow.cs:
	* gtk-gui/MonoDevelop.Refactoring.Rename.RenameItemDialog.cs:
	* gtk-gui/MonoDevelop.Refactoring.RefactoringPreviewDialog.cs:
	* gtk-gui/MonoDevelop.Refactoring.ExtractMethod.ExtractMethodDialog.cs:
	* gtk-gui/MonoDevelop.Refactoring.IntroduceConstant.IntroduceConstantDialog.cs:
	  Flush.

2009-10-26  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.Rename/RenameRefactoring.cs: Fixed
	  issue in CollectMembers.

2009-10-23  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring.Rename/RenameItemDialog.cs:
	* MonoDevelop.Refactoring.Rename/RenameRefactoring.cs: Added
	  support for rename file names of partial classes.

2009-10-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/RefactoryCommands.cs: Fixed "Bug
	  549130 - "resolve" adds using st. at wrong place when
	  namespace and classname conflict".

2009-10-22  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Refactoring/RefactoryCommands.cs: